[package]
name = "nestur"
version = "0.1.0"
authors = ["Theron <tspiegl@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = { version = "0.33", features = ["bundled", "static-link"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
cpuprofiler = "0.0.3"

[profile.release]
debug = true
